...
                android:textColor="@color/white"
                app:backgroundTint="@color/primary"
                app:cornerRadius="24dp"
                app:elevation="4dp"/>

            <TextView
                android:id="@+id/textRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-bold"
                android:padding="8dp"
                android:text="Non hai un account? Registrati"
...
